--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <tr>
             <td>Wycena</td>
             <td>0 zł</td>
-            <td>10 dolarów miesięcznie</td>
+            <td>10 dolarów miesięcznie(stusent i nauczyciel mają za darmo)</td>
             <td>19 USD za użytkownika/miesiąc</td>
             <td>39 USD za użytkownika/miesiąc</td>
         </tr>
